kubernetes/financeiro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: financeiro-backend
  name: financeiro-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: financeiro-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: financeiro-backend
    spec:
      containers:
        - args:
            - sh
            - -c
            - python manage.py runserver 0.0.0.0:8000
          image: invista/financeiro:0.0.1
          name: financeiro_backend
          ports:
            - containerPort: 8000
          resources: 
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: financeiro-queue
  name: financeiro-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: financeiro-queue
  template:
    metadata:
      labels:
        io.kompose.service: financeiro-queue
    spec:
      containers:
        - args:
            - sh
            - -c
            - python consumer.py
          image: invista/financeiro:0.0.1
          name: financeiro-queue
          resources: 
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: financeiro-backend
  name: financeiro-backend
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8000
  selector:
    io.kompose.service: financeiro-backend
