kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: users-backend
  name: users-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users-backend
  template:
    metadata:
      labels:
        io.kompose.service: users-backend
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: users
            - name: DB_HOST
              value: 34.95.212.65
            - name: DB_PASSWORD
              valueFrom: 
                secretKeyRef:
                  name: database-secrets
                  key: DB_PASSWORD
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              valueFrom: 
                secretKeyRef:
                  name: database-secrets
                  key: DB_USERNAME
          image: invista/users:0.0.4
          name: users-backend
          ports:
            - containerPort: 8000
          resources: 
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: users-backend
  name: users-backend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8000
  selector:
    io.kompose.service: users-backend
